Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.0 Beta 3
-
None
-
macOS 10.14
-
-
41f8b4883afddf2868beacedaf8270553237ceaf (qt/qtwebengine/5.12.0)
Description
Quicknanobrowser asserts in weak_ptr.cc after call to content::RenderWidgetHostImpl::SynchronizeVisualProperties from QtWebEngineCore::RenderWidgetHostViewQt::updatePaintNode was made on the wrong thread (i.e. the SGRenderThread when it should have been CrBrowserMain).
Simplebrowser works fine as the calls are all made on the CrBrowserMain thread.
Attachments
For Gerrit Dashboard: QTBUG-71430 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
244229,4 | Fix quicknanobrowser crash on startup | 5.12.0 | qt/qtwebengine | Status: MERGED | +2 | 0 |