Fix quicknanobrowser crash on startup

Don't call SynchronizeVisualProperties from updatePaintNode

Fixes: QTBUG-71430
Change-Id: I6bd231b22c0473f9fd47ca3cdbcb8262f314bd5b
Reviewed-by: Michael Brüning <michael.bruning@qt.io>